# computer-graphics

./: README.md  circles.py  cutting.py  polygons.py  pyproject.toml
